# LunaFN-Server

./: CMakeLists.txt  README.md
include/: Routes.hpp  Webserver.hpp
include/tokenManager/: TokenManager.hpp  tokens.json
include/types/: Error.hpp
include/utils/: Functions.hpp  String.hpp
src/: Webserver.cpp  main.cpp
src/routes/: Auth.cpp
src/tokenManager/: TokenManager.cpp
src/types/: Functions.cpp
